tests/miniJava/neg/003551_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( int ) { } else { } } }
